# SimpleITK

CMake/: sitkLanguageOptions.cmake
SuperBuild/: External_ITK.cmake  SuperBuild.cmake
Utilities/Distribution/manylinux/imagefiles/: cmd.sh
Wrapping/: CMakeLists.txt
Wrapping/Common/: SimpleITK_Common.i
Wrapping/Go/: CMakeLists.txt  Go.i
